Bug 86095 - [ILK]igt/kms_mmio_vs_cs_flip/setplane_vs_cs_flip sporadically causes system hang
Summary: [ILK]igt/kms_mmio_vs_cs_flip/setplane_vs_cs_flip sporadically causes system hang
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium critical
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-10 07:57 UTC by lu hua
Modified: 2017-10-06 14:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (92.81 KB, text/plain)
2014-11-10 07:57 UTC, lu hua
no flags Details
dmesg(CONFIG_DRM_I915_FBDEV=n) (126.89 KB, text/plain)
2014-11-24 07:02 UTC, lu hua
no flags Details
dmesg(patch) (124.78 KB, text/plain)
2014-11-25 05:51 UTC, lu hua
no flags Details

Description lu hua 2014-11-10 07:57:41 UTC
Created attachment 109194 [details]
dmesg

==System Environment==
--------------------------
Regression: not sure 
Non-working platforms: ILK

==kernel==
--------------------------
drm-intel-fixes/dc54e76d12f2b9ee32f8f4bc7ade79dbc7e6e55c

==Bug detailed description==
It causes system hang on ILK with -fixes kernel, it happens 3 in 5 runs. 


output:
IGT-Version: 1.8-gc049c39 (x86_64) (Linux: 3.18.0-rc3_drm-intel-fixes_dc54e7_20141110+ x86_64)

==Reproduce steps==
---------------------------- 
1. ./kms_mmio_vs_cs_flip --run-subtest setplane_vs_cs_flip
Comment 1 Daniel Vetter 2014-11-20 15:20:09 UTC
How bad a hang? Anything over netconsole or serial console?

Also might be worth a shot to test with CONFIG_DRM_I915_FBDEV=n.
Comment 2 lu hua 2014-11-24 07:02:25 UTC
Created attachment 109925 [details]
dmesg(CONFIG_DRM_I915_FBDEV=n)

add CONFIG_DRM_I915_FBDEV=n, the hang disappears, but reports warning.

[  193.280972] ------------[ cut here ]------------
[  193.281040] WARNING: CPU: 1 PID: 3960 at drivers/gpu/drm/i915/intel_display.c:901 intel_wait_for_vblank+0xab/0x1a0 [i915]()
[  193.281046] vblank wait on pipe B timed out
[  193.281050] Modules linked in: netconsole configfs snd_hda_codec_hdmi snd_hda_codec_idt snd_hda_codec_generic i2c_i801 lpc_ich mfd_core snd_hda_intel snd_hda_controller firew
ire_ohci snd_hda_codec snd_hwdep firewire_core crc_itu_t snd_pcm bcma snd_timer snd soundcore dm_mod wmi battery parport_pc parport tpm_tis tpm ac acpi_cpufreq i915 button video
 drm_kms_helper drm [last unloaded: netconsole]
[  193.281150] CPU: 1 PID: 3960 Comm: kms_mmio_vs_cs_ Tainted: G        W      3.18.0-rc5_kcloud_342400_20141124+ #184
[  193.281155] Hardware name: Dell Inc. Latitude E6510/0JKDHD, BIOS A05 08/10/2010
[  193.281159]  00000000 00000000 ec675cac c17689a2 ec675cd4 ec675cc4 c10312af f85ab08c
[  193.281180]  f57f0000 00000453 fffe5e39 ec675cdc c10312f1 00000009 ec675cd4 f85f6674
[  193.281202]  ec675cf0 ec675d08 f85ab08c f85f4a09 00000385 f85f6674 00000042 00000001
[  193.281223] Call Trace:
[  193.281234]  [<c17689a2>] dump_stack+0x41/0x52
[  193.281244]  [<c10312af>] warn_slowpath_common+0x66/0x7d
[  193.281295]  [<f85ab08c>] ? intel_wait_for_vblank+0xab/0x1a0 [i915]
[  193.281303]  [<c10312f1>] warn_slowpath_fmt+0x2b/0x2f
[  193.281354]  [<f85ab08c>] intel_wait_for_vblank+0xab/0x1a0 [i915]
[  193.281407]  [<f85c4051>] intel_dp_link_down+0x18b/0x195 [i915]
[  193.281459]  [<f85c43f0>] ilk_post_disable_dp+0x1a/0xb9 [i915]
[  193.281509]  [<f85b3bbb>] ironlake_crtc_disable+0xb5/0x630 [i915]
[  193.281561]  [<f85af13c>] __intel_set_mode+0x6d1/0x109a [i915]
[  193.281568]  [<c106f337>] ? vprintk_emit+0x468/0x47b
[  193.281574]  [<c106f337>] ? vprintk_emit+0x468/0x47b
[  193.281624]  [<f85b54a6>] intel_set_mode+0x17/0x2f [i915]
[  193.281675]  [<f85b612b>] intel_crtc_set_config+0x8be/0x984 [i915]
[  193.281706]  [<f8053268>] drm_mode_set_config_internal+0x41/0xa0 [drm]
[  193.281734]  [<f8056522>] drm_mode_setcrtc+0x32b/0x40e [drm]
[  193.281762]  [<f80561f7>] ? drm_mode_setplane+0x188/0x188 [drm]
[  193.281784]  [<f804c2ea>] drm_ioctl+0x39d/0x413 [drm]
[  193.281811]  [<f80561f7>] ? drm_mode_setplane+0x188/0x188 [drm]
[  193.281820]  [<c1020792>] ? lapic_next_event+0x1b/0x1f
[  193.281842]  [<f804bf4d>] ? drm_copy_field+0x5c/0x5c [drm]
[  193.281850]  [<c110ec48>] do_vfs_ioctl+0x417/0x4cc
[  193.281857]  [<c107f22b>] ? current_kernel_time+0x54/0x98
[  193.281863]  [<c106205d>] ? trace_hardirqs_on_caller+0x14b/0x166
[  193.281869]  [<c1062083>] ? trace_hardirqs_on+0xb/0xd
[  193.281876]  [<c110ed40>] SyS_ioctl+0x43/0x67
[  193.281903]  [<c176f278>] sysenter_do_call+0x12/0x12
[  193.281909] ---[ end trace c5acaa57c78c67fb ]---
Comment 3 Daniel Vetter 2014-11-24 15:54:10 UTC
(In reply to Daniel Vetter from comment #1)
> How bad a hang? Anything over netconsole or serial console?

Please answer this question, too.

Also please test this patch: http://patchwork.freedesktop.org/patch/37389/
Comment 4 lu hua 2014-11-25 05:51:41 UTC
Created attachment 109979 [details]
dmesg(patch)

(In reply to Daniel Vetter from comment #3)
> (In reply to Daniel Vetter from comment #1)
> > How bad a hang? Anything over netconsole or serial console?
> 
> Please answer this question, too.
> 
> Also please test this patch: http://patchwork.freedesktop.org/patch/37389/

Test this patch 10 cycles, the hang doesn't exist.
Also test the latest drm-intel-fixes kernel 10 cycles, I can't reproduce the hang. I am not sure "how bad a hang".
Comment 5 Jani Nikula 2015-02-09 18:55:33 UTC
commit 0ca09685546fed5fc8f0535204f0626f352140f4
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Mon Nov 24 16:54:11 2014 +0100

    drm/i915: Drop vblank wait from intel_dp_link_down

in drm-intel-next-fixes
Comment 6 Ding Heng 2015-02-11 01:27:14 UTC
commit 0ca09685546fed5fc8f0535204f0626f352140f4 test pass. Change state to verified.
Comment 7 Elizabeth 2017-10-06 14:34:00 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.